test/compile_fail/shift_removed.zig
const shift = @import("shift");

comptime {
    _ = shift.shift;
}
